We no longer need the `--add-exports=java.base/sun.nio.ch=ALL-UNNAMED` argument for compiling.