@@ -1080,7 +1080,7 @@
                 <jdk>[9, )</jdk>
             </activation>
             <properties>
-                <java.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</java.exports>
+                <java.exports/>
                 <scala.java.additional.args>-nobootcp</scala.java.additional.args>
             </properties>
         </profile>
